Removed uncessary imports

--- a/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/cellpose_ex.ipynb
+++ b/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/cellpose_ex.ipynb
@@ -14,9 +14,7 @@
    "outputs": [],
    "source": [
     "from cellpose import io, models\n",
-    "import matplotlib.pyplot as plt\n",
-    "from csbdeep.utils import normalize\n",
-    "import numpy as np"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
