Cleaned up segmentation code

--- a/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/cell_tracking.ipynb
+++ b/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/cell_tracking.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -108,31 +108,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_gif(x, filename, title):\n",
-    "    ims = [Image.fromarray(x[i,...,0], 'LA') for i in range(x.shape[0])]\n",
-    "    ims[0].save(filename, save_all=True, \n",
-    "                append_images=ims[1:],\n",
-    "                optimize=False, loop=0 )\n",
+    "    # ims = [Image.fromarray(x[i,...,0], 'LA') for i in range(x.shape[0])]\n",
+    "    # ims[0].save(filename, save_all=True, \n",
+    "    #             append_images=ims[1:],\n",
+    "    #             optimize=False, loop=0 )\n",
     "    \n",
-    "    # def plot(im):\n",
-    "    #     fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "    #     ax.imshow(im, 'Greys_r', vmax=3000)\n",
-    "    #     plt.axis('off')\n",
-    "    #     plt.title(title)\n",
+    "    def plot(im):\n",
+    "        fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "        ax.imshow(im, 'Greys_r', vmax=3000)\n",
+    "        plt.axis('off')\n",
+    "        plt.title(title)\n",
     "\n",
-    "    #     fig.canvas.draw()  # draw the canvas, cache the renderer\n",
-    "    #     image = np.frombuffer(fig.canvas.tostring_rgb(), dtype='uint8')\n",
-    "    #     image = image.reshape(fig.canvas.get_width_height()[::-1] + (3,))\n",
+    "        fig.canvas.draw()  # draw the canvas, cache the renderer\n",
+    "        image = np.frombuffer(fig.canvas.tostring_rgb(), dtype='uint8')\n",
+    "        image = image.reshape(fig.canvas.get_width_height()[::-1] + (3,))\n",
     "\n",
-    "    #     plt.close(fig)\n",
+    "        plt.close(fig)\n",
     "\n",
-    "    #     return image\n",
+    "        return image\n",
     "\n",
-    "    # imageio.mimsave(filename, [plot(x[i, ..., 0]) for i in range(x.shape[0])])\n",
+    "    imageio.mimsave(filename, [plot(x[i, ..., 0]) for i in range(x.shape[0])], loop=0)\n",
     "    \n",
     "\n",
     "\n",
@@ -154,6 +154,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Methods for displaying models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shuffle_colors(ymax, cmap):\n",
+    "    \"\"\"Utility function to generate a colormap for a labeled image\"\"\"\n",
+    "    cmap = mpl.colormaps[cmap].resampled(ymax)\n",
+    "    nmap = cmap(range(ymax))\n",
+    "    np.random.shuffle(nmap)\n",
+    "    cmap = ListedColormap(nmap)\n",
+    "    cmap.set_bad('black')\n",
+    "    return cmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_with_seg(x, y, filename):\n",
+    "    ymax = np.max(y)\n",
+    "    cmap = shuffle_colors(ymax, 'tab20')\n",
+    "\n",
+    "    def plot(x, y):\n",
+    "        yy = copy.deepcopy(y)\n",
+    "        yy = np.ma.masked_equal(yy, 0)\n",
+    "\n",
+    "        fig, ax = plt.subplots(1, 2, figsize=(12, 6))\n",
+    "        ax[0].imshow(x, cmap='Greys_r', vmax=3000)\n",
+    "        ax[0].axis('off')\n",
+    "        ax[0].set_title('Raw')\n",
+    "        ax[1].imshow(yy, cmap=cmap, vmax=ymax)\n",
+    "        ax[1].set_title('Segmented')\n",
+    "        ax[1].axis('off')\n",
+    "\n",
+    "        fig.canvas.draw()  # draw the canvas, cache the renderer\n",
+    "        image = np.frombuffer(fig.canvas.tostring_rgb(), dtype='uint8')\n",
+    "        image = image.reshape(fig.canvas.get_width_height()[::-1] + (3,))\n",
+    "        plt.close(fig)\n",
+    "\n",
+    "        return image\n",
+    "\n",
+    "    imageio.mimsave(\n",
+    "        filename,\n",
+    "        [plot(x[i,...,0], y[i,...,0])\n",
+    "        for i in range(y.shape[0])],\n",
+    "        loop=0\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Run Segmentation model on data to create masks\n",
     "\n",
     "Before any cell tracking can happen, DeepCell requires masks to be created by its segmentation models.\n",
@@ -163,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -209,70 +272,39 @@
     }
    ],
    "source": [
-    "# DeepCell \n",
+    "# DeepCell on caliban nuclear\n",
     "deep_nuclear = NuclearSegmentation()\n",
     "y_pred = deep_nuclear.predict(x, image_mpp=0.65)\n",
-    "deep_cyto = CytoplasmSegmentation()\n",
-    "deep_cyto_pred = deep_cyto.predict(cytoplasm_data)"
+    "save_with_seg(x, y_pred, 'caliban-segmented.gif')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "338"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:No training configuration found in save file, so the model was *not* compiled. Compile it manually.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:No training configuration found in save file, so the model was *not* compiled. Compile it manually.\n",
+      "INFO:root:Converting image dtype to float\n"
+     ]
     }
    ],
    "source": [
-    "temp = y_pred[0,:,:,0]\n",
-    "len(temp[temp == 57])"
+    "# DeepCell on example cytoplasm data\n",
+    "deep_cyto = CytoplasmSegmentation()\n",
+    "deep_cyto_pred = deep_cyto.predict(cytoplasm_data, image_mpp=0.5)\n",
+    "save_with_seg(cytoplasm_data, deep_cyto_pred, '12.20.17_combo2-cell1-cyto-zpos2-segmented.gif')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot(x, y):\n",
-    "    yy = copy.deepcopy(y)\n",
-    "    yy = np.ma.masked_equal(yy, 0)\n",
-    "\n",
-    "    fig, ax = plt.subplots(1, 2, figsize=(12, 6))\n",
-    "    ax[0].imshow(x, cmap='Greys_r', vmax=3000)\n",
-    "    ax[0].axis('off')\n",
-    "    ax[0].set_title('Raw')\n",
-    "    ax[1].imshow(yy, cmap=cmap, vmax=ymax)\n",
-    "    ax[1].set_title('Segmented')\n",
-    "    ax[1].axis('off')\n",
-    "\n",
-    "    fig.canvas.draw()  # draw the canvas, cache the renderer\n",
-    "    image = np.frombuffer(fig.canvas.tostring_rgb(), dtype='uint8')\n",
-    "    image = image.reshape(fig.canvas.get_width_height()[::-1] + (3,))\n",
-    "    plt.close(fig)\n",
-    "\n",
-    "    return image\n",
-    "\n",
-    "imageio.mimsave(\n",
-    "    './caliban-labeled.gif',\n",
-    "    [plot(x[i,...,0], y_pred[i,...,0])\n",
-    "     for i in range(y_pred.shape[0])]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
