Added stardist cellpose segmentation

--- a/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/cell_tracking.ipynb
+++ b/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/cell_tracking.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,10 +207,7 @@
     "        [plot(x[i,...,0], y[i,...,0])\n",
     "        for i in range(y.shape[0])],\n",
     "        loop=0\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "\n"
+    "    )\n"
    ]
   },
   {
@@ -305,6 +302,55 @@
     "deep_cyto_pred = deep_cyto.predict(cytoplasm_data, image_mpp=0.5)\n",
     "save_with_seg(cytoplasm_data, deep_cyto_pred, '12.20.17_combo2-cell1-cyto-zpos2-segmented.gif')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found model '2D_versatile_fluo' for 'StarDist2D'.\n",
+      "Loading network weights from 'weights_best.h5'.\n",
+      "Loading thresholds from 'thresholds.json'.\n",
+      "Using default values: prob_thresh=0.479071, nms_thresh=0.3.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Stardist on example cytoplasm data\n",
+    "from stardist.models import StarDist2D\n",
+    "from csbdeep.utils import normalize\n",
+    "\n",
+    "sd_model = StarDist2D.from_pretrained('2D_versatile_fluo')\n",
+    "labels = [sd_model.predict_instances(normalize(item))[0] for item in cytoplasm_data]\n",
+    "sd_predict = np.expand_dims(np.array(labels), 3)\n",
+    "save_with_seg(cytoplasm_data, sd_predict, 'stardist_seg.gif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cellpose on example cytoplasm data\n",
+    "from cellpose import models\n",
+    "\n",
+    "cyto3 = models.Cellpose(model_type='cyto3')\n",
+    "labels = [cyto3.eval(x, channels=[0,0])[0] for x in cytoplasm_data]\n",
+    "cellpose_predict = np.expand_dims(np.array(labels), 3)\n",
+    "save_with_seg(cytoplasm_data, cellpose_predict, 'cellpose_seg.gif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
