--- a/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/example_pretrained.ipynb
+++ b/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/example_pretrained.ipynb
@@ -179,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tooleval",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -197,5 +197,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
