--- a/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/stardist_ex.ipynb
+++ b/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/stardist_ex.ipynb
@@ -391,7 +391,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tooleval",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -409,5 +409,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
