corrected tissuenet model name

--- a/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/deepcell_ex.ipynb
+++ b/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/deepcell_ex.ipynb
@@ -183,7 +183,7 @@
     "\n",
     "- If segmenting cytoplasm, use: [CytoplasmSegmentation](https://deepcell.readthedocs.io/en/master/API/deepcell.applications.html#cytoplasmsegmentation)\n",
     "- If segmenting nuclei, use: [NuclearSegmentation](https://deepcell.readthedocs.io/en/master/API/deepcell.applications.html#nuclearsegmentation)\n",
-    "- If segmenting tissue, use: [Mesmer](https://deepcell.readthedocs.io/en/master/API/deepcell.applications.html#mesmer)\n",
+    "- If segmenting tissuenet like data, use: [Mesmer](https://deepcell.readthedocs.io/en/master/API/deepcell.applications.html#mesmer)\n",
     "\n",
     "For this example, we will opt to segment cytoplasm as the fluorescence image highlights whole cells\n",
     "\n",
@@ -254,7 +254,7 @@
     "    models = {\n",
     "        'cyto' : CytoplasmSegmentation(),\n",
     "        'nuclei' : NuclearSegmentation(),\n",
-    "        'tissue' : Mesmer()\n",
+    "        'tissuenet' : Mesmer()\n",
     "    }\n",
     "\n",
     "    return models\n",
@@ -393,7 +393,7 @@
     "\n",
     "display_deepcell(img, all_models)\n",
     "\n",
-    "masks = all_models['tissue'].predict(image_at_time)\n",
+    "masks = all_models['tissuenet'].predict(image_at_time)\n",
     "plt.subplot(1, 4, 4)\n",
     "plt.imshow(np.squeeze(masks), cmap='jet')\n",
     "plt.axis(\"off\")\n",
