--- a/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/test_tissuenet.ipynb
+++ b/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/test_tissuenet.ipynb
@@ -4481,7 +4481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Testing with Mesmer"
+    "### Testing with Mesmer"
    ]
   },
   {
