--- a/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/cellpose_ex.ipynb
+++ b/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/cellpose_ex.ipynb
@@ -141,7 +141,7 @@
     "* cyto\n",
     "* cyto2\n",
     "* cyto3\n",
-    "* ctyo4\n",
+    "* nuclei\n",
     "\n",
     "## Or 8 dataset specific models\n",
     "* tissuenet_cp3: tissuenet dataset.\n",
