New path to test dataset

--- a/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/example_pretrained.ipynb
+++ b/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/example_pretrained.ipynb
@@ -264,19 +264,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<numpy.lib.npyio.NpzFile object at 0x11d373310>\n"
+      "<numpy.lib.npyio.NpzFile object at 0x1a65288e0>\n"
      ]
     }
    ],
    "source": [
-    "test_data = np.load(rf\"/Users/tacss/.deepcell/datasets/tissuenet_v1-1/test.npz\")\n",
+    "test_data = np.load(rf\"tissuenet_v1-1/test.npz\")\n",
     "print(test_data)\n",
     "X_test = test_data['X'][0:100]\n",
     "y_test = test_data['y'][0:100]"
